# Personal-HomeKit-HAP

./: .gitignore  Accessory.cpp  AccessorySet.cpp  AccessorySet.h  BoolCharacteristics.h  CMakeLists.txt  CharType.h  Characteristics.cpp  Characteristics.h  Configuration.h  DeviceType.h  FloatCharacteristics.h  Helpers.cpp  Helpers.h  IntCharacteristics.h  KeyController.cpp  KeyController.h  LibHAP.sln  LibHAP.vcxproj  LibHAP.vcxproj.filters  PHKAccessory.cpp  PHKAccessory.h  PHKNetworkIP.cpp  PHKNetworkIP.h  Permission.h  README.md  Service.cpp  Service.h  ServiceType.h  StringCharacteristics.h  Unit.h  hapDefines.h  install.sh  libHAP.h  pre_install.sh
Example/: Accessory.cpp  Accessory.cpp.old  CMakeLists.txt  Example.vcxproj  main.cpp
curve25519/: curve25519-donna.h
ed25519-donna/: ed25519-donna-batchverify.h  ed25519-donna-impl-base.h  modm-donna-32bit.h
include/: Accessory.h  AccessorySet.h  BoolCharacteristics.h  CharType.h  Characteristics.h  FloatCharacteristics.h  IntCharacteristics.h  KeyController.h  Permission.h  Service.h  ServiceType.h  StringCharacteristics.h  hapDefines.h  libHAP.h
include/net/: ConnectionInfo.h  HAPService.h  Message.h  MessageData.h  MessageDataRecord.h  PairStates.h  Response.h
net/: ConnectionInfo.cpp  ConnectionInfo.h  HAPService.cpp  HAPService.h  Message.cpp  MessageData.cpp  MessageDataRecord.cpp  Response.cpp  Response.h
rfc6234-master/: hkdf.h  sha.h
srcs/: Accessory.cpp  AccessorySet.cpp  BoolCharacteristics.cpp  Characteristics.cpp  FloatCharacteristics.cpp  IntCharacteristics.cpp  KeyController.cpp  Service.cpp  StringCharacteristics.cpp
srcs/net/: ConnectionInfo.cpp  HAPService.cpp  Message.cpp  MessageData.cpp  MessageDataRecord.cpp  Response.cpp
srp/: t_conf.c  t_conv.c  t_math.c  t_misc.c  t_pw.c
